# middlines

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  orval.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: busyness-chart.tsx  dining-hall-card.tsx  dining-hall-dashboard.tsx  info-dialog.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/components/ui/: card.tsx  chart.tsx
frontend/src/lib/: busyness-colors.ts  data-filters.ts  query-client.ts  trend-helpers.ts
hardware/: .clangd  .gitignore  CMakeLists.txt  CamDeleteThis.txt  flash_credentials.sh  flash_device_config.sh  platformio.ini  sdkconfig  sdkconfig.defaults
hardware/.zed/: tasks.json
hardware/include/: config.h  secrets.h
hardware/main/: CMakeLists.txt  adv_buffer.c  adv_buffer.h  advertisement.h  app_main.c  app_state.h  ble_scan.c  ble_scan.h  cloud.c  cloud.h  control.c  control.h  control_config.c  control_config.h  ethernet.c  ethernet.h  fw_update.c  fw_update.h  hardware.c  influx_config.c  influx_config.h  influx_upload.c  influx_upload.h  ota_boot.c  ota_boot.h  provisioning.c  provisioning.h  storage.c  storage.h  time_sync.c  time_sync.h
hardware/src/: main.cpp
influxdb3-ui/config/: config.json
nginx-proxy/: nginx.conf
services/aggregator/: Dockerfile  main.py  pyproject.toml
services/api/: Dockerfile  main.py  pyproject.toml
services/db-init/: Dockerfile  main.py  pyproject.toml
services/ingester/: Dockerfile  main.py  pyproject.toml
services/simulator/: Dockerfile  main.py  pyproject.toml
